tests/Core/positive/test051.jvc
-- Type annotations for patterns

type Box {
    box : Π A : Type, A → Box A;
};

def f : Box (Π A : Type, A → A) → Int := \(x : Box (Π A : Type, A → A))
    match x : Box (Π A : Type, A → A) with : Int {
        box _ (g : Π A : Type, A → A) : Box (Π A : Type, A → A)  := g Int 1;
    };

f (box (Π A : Type, A → A) \(A : Type) \(x : A) x)
-- result: 1
